# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# bug.txt should follow the exact same format

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "The Gathering"

08/01/2003
[O]- Adjusted Black Market (less pots). Improved x / I display. Especially
     allows you to read very long item names in stores to see all boni.
     Tweaked overburdened-message for FA from MA.

07/01/2003
[P]- First entry 2003, ahaha.. Sorry, Rangers & Paladins brought back.
     Still experimental! Forum feedback from players needed.

22/12/2002
[M]- Ancient Dragons got 1,5x the HP. Mature Dragons got 1,25x the HP.
     Pure mages get AI_ANNOY again. Boldor get's AI_ANNOY too (DROP_GREAT).

21/12/2002
[m]- Client/server now do version check on development versions.
     That number starts at 0, raises with each client and is never
     used for any other purpose. (c-init.c and nserver.c)
     Client displays a link to documentation.
[M]- Toned down townspeople (more newbie-friendly)
[G]- Fixed aiming for mimic powers

17/12/2002
[m]- New metaserver scheme, using xml feeds for ease of parsing

12/12/2002
[M]- S_LOWEXP and S_NOEXP flags added to prevent summon certain farming.

25/11/2002
[I]- No more color information in the message dump in character dumps

20/11/2002
[I]- Unkown skills(no mod, no value) arent displayed in the list
[I]- Removed a *LOT* of AI_ANNOY
[P]- Mind, Nature, Divination, Meta and Udun schools are bound to Wisdom
     instead of Intelligence. Priests are tweaked accordingly
[P]- Max skill level = player level + 2
[P]- Impossible to gain exp after level 50 until Morgoth is dead
[m]- Windows server nearly works, but there is a problem with player speed

13/11/2002
[O]- Adjusted 2h-only weapons.
     Artefacts now sell for the intended values.
     Changed former Amulet Of Suspicion into Amulet Of Rage.
     Adjusted ego lights' prices.
[G]- *ID* services cost more now, making *ID* scrolls an alternative again.