@@ -26,6 +26,8 @@
 [O]- Adjusted Black Market (less pots). Improved x / I display. Especially
      allows you to read very long item names in stores to see all boni.
      Tweaked overburdened-message for FA from MA.
+[O]- Traps below items on the floor are now indicated at looking at them,
+     in case the player already detected them before.
 
 07/01/2003
 [P]- First entry 2003, ahaha.. Sorry, Rangers & Paladins brought back.
